[package]
name = "either_n"
version = "0.2.0"
authors = ["Taylor Cramer <cramertj@cs.washington.edu>"]

license = "MIT/Apache-2.0"
repository = "https://github.com/cramertj/EitherN-rs"
documentation = "https://docs.rs/either_n/0"

description = "An Either enum with N variants"

keywords = ["either", "enum"]

[features]
default = ["use_std"]
use_std = []
